--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "chesschapaa",
-    "short_name": "chesschapaa",
+    "name": "ChessApp",
+    "short_name": "ChessApp",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
