--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: chesschapaa
+name: ChessApp
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -37,10 +37,28 @@ dependencies:
   get: ^4.6.6
   email_validator: ^3.0.0
   country_picker: ^2.0.27
+  image_picker: ^0.8.3+2
+  http: any
+  uuid: ^4.5.1
+  crypto: ^3.0.6
+  sms_autofill: ^2.4.1
+  shared_preferences: ^2.3.4
+  cached_network_image: ^3.4.1
+  flutter_cache_manager: ^3.3.0
+  font_awesome_flutter: ^10.8.0
+  socket_io_client: ^3.0.2
+  onesignal_flutter: ^5.2.6
+  carousel_slider: ^5.0.0
+  smooth_page_indicator: ^1.2.0+3
+
+  # No Desktop
+  camera: ^0.11.0+2
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -66,6 +84,7 @@ flutter:
     - assets/add/apple_2.png
     - assets/add/google_2.png
     - assets/add/default_profile.png
+    - assets/pieces/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
