--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "chesschapaa" "\0"
+            VALUE "FileDescription", "ChessApp" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "chesschapaa" "\0"
+            VALUE "InternalName", "ChessApp" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "chesschapaa.exe" "\0"
-            VALUE "ProductName", "chesschapaa" "\0"
+            VALUE "OriginalFilename", "ChessApp.exe" "\0"
+            VALUE "ProductName", "ChessApp" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
